--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     "experimentalDecorators": true,
     "resolveJsonModule": true,
     "baseUrl": ".",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "declaration": true
   },
   "exclude": ["node_modules"],
   "include": ["./src/**/*.ts"]
