--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "teamcity-ts",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "author": "Matt Wilkinson <mattwilki17@gmail.com>",
   "license": "MIT",
   "main": "lib/index.js",
@@ -8,6 +8,7 @@
   "files": [
     "lib/**/*"
   ],
+  "type": "module",
   "scripts": {
     "test": "jest",
     "build": "tsc"
